# ShapeClimPy

./: README.md  pyproject.toml  requirements.txt
src/csv_processing/: cleaning_processor.py  filling_gaps_processor.py  filling_gaps_strategy.py  models.py  parsing_processor.py
src/geotiff_processing/: geotiff_processor.py
src/netcdf_processing/: interpolation_service.py  netcdf_processor.py
src/relief_processing/: relief_merging.py
src/ssp_models_compare/: models_comparer.py
