[project]
name = "ShapeClimPy"
version = "0.0.1"
authors = [
  { name="Rupasov K", email="kirillrupasov143@gmail.com" },
]
description = "ShapeClimPy is a library designed to simplify and automate the basic steps of processing and analyzing meteorological data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CrazyFenX/ShapeClimPy"
